# poly-micro-backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  development-planning.md  docker-compose.yml  entrypoint.sh  fix_logs.py  fix_service_project_ids.py  logging-ai-agent.py  main.py  pyproject.toml  requirements.txt  run.py  run_app.sh  run_logging_demo.py  run_tests.sh  setup_demo.py  structure.txt
.github/scripts/: build-docs.sh
.github/workflows/: docs.yml
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: auth.py  cache.py  config.py  enum_compat.py  jwt_generator.py  sample_data.py
app/db/: __init__.py  database.py
app/demo/: __init__.py  real_world_example.py  run_demo.py  sample_service.py  setup_demo_project.py
app/models/: log.py  user.py
app/schemas/: __init__.py  analysis.py  log.py  metrics.py  project.py  question.py  service.py  service_test_item.py  service_tests.py  test.py  test_item.py  user.py
app/scripts/: create_test_services.py
app/services/: __init__.py  auth_service.py  log_service.py  metrics_service.py  project_service.py  service_logs_service.py  service_manager.py  service_service.py  test_analyzer_service.py  test_service.py
app/utils/: logger.py
data-samples/: mockData.ts  monitoring.ts
docs/: README.md  _sidebar.md  api.md  architecture.md  caching.md  development.md  docker.md  logging.md
docs/templates/: docsify-template.html
tests/: __init__.py  conftest.py
tests/api/: test_log_repository.py  test_logs.py  test_metrics.py  test_projects.py  test_services.py
(+20 files in other folders)
