[project]
name = "poly-micro-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "dotenv>=0.9.9",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "bcrypt>=4.3.0",
    "pytest-asyncio>=1.0.0",
]  # Updated to include motor
